done home, search, incomplete manage

--- a/src/main/resources/static/views/header.html
+++ b/src/main/resources/static/views/header.html
@@ -29,9 +29,9 @@
                     </li>
                     <li class="nav__item">Category
                         <ul class = "nav__link nav__dropdown dropdown__animation">
-                            <li><a href="/myspring/product?type=phone">Smart Phone</a></li>
-                            <li><a href="/myspring/product?type=tablet">Tablet</a></li>
-                            <li><a href="/myspring/product?type=laptop">Laptop</a></li>
+                            <li><a href="/home/products?type=phone">Smart Phone</a></li>
+                            <li><a href="/home/products?type=tablet">Tablet</a></li>
+                            <li><a href="/home/products?type=laptop">Laptop</a></li>
                             <li><a href="">Accessory</a></li>
                             <li><a href="">Watch</a></li>
                         </ul>
