--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -33,7 +33,7 @@
                                 <span class="">New Inspiration 2020</span>
                                 <h1 class="">PHONES MADE FOR YOU!</h1>
                                 <p>Trending from mobile and headphone style collection</p>
-                                <a href="/myspring/product?type=phone"><button class="hero__btn">SHOP NOW</button></a>
+                                <a href="/home/products?type=phone"><button class="hero__btn">SHOP NOW</button></a>
                             </div>
                             <div class="hero__right">
                                 <div class="hero__img-container">
@@ -48,7 +48,7 @@
                                 <span>New Inspiration 2020</span>
                                 <h1>HEADPHONE MADE FOR YOU!</h1>
                                 <p>Trending from mobile and headphone style collection</p>
-                                <a href="/myspring"><button class="hero__btn">SHOP NOW</button></a>
+                                <a href="/home"><button class="hero__btn">SHOP NOW</button></a>
                             </div>
                             <div class="hero__right">
                                 <img class="banner_02" src="../resources/images/headphone.png" alt="banner2" />
@@ -61,7 +61,7 @@
                                 <span>New Inspiration 2020</span>
                                 <h1>LAPTOP MADE FOR YOU!</h1>
                                 <p>Trending from mobile and headphone style collection</p>
-                                <a href="/myspring/product?type=laptop"><button class="hero__btn">SHOP NOW</button></a>
+                                <a href="/home/products?type=laptop"><button class="hero__btn">SHOP NOW</button></a>
                             </div>
                             <div class="hero__right">
                                 <img class="banner_02" src="../resources/images/laptop.png" alt="banner2" />
@@ -74,7 +74,7 @@
                                 <span>New Inspiration 2020</span>
                                 <h1>TABLET MADE FOR YOU!</h1>
                                 <p>Trending from mobile and headphone style collection</p>
-                                <a href="/myspring/product?type=tablet"><button class="hero__btn">SHOP NOW</button></a>
+                                <a href="/home/products?type=tablet"><button class="hero__btn">SHOP NOW</button></a>
                             </div>
                             <div class="hero__right">
                                 <img class="banner_02" src="../resources/images/tablet.png" alt="banner2" />
@@ -100,7 +100,6 @@
     </div>
 </header>
 <!-- End Header -->
-
 <!-- Main -->
 <main id="main">
     <div class="container">
@@ -115,7 +114,7 @@
                         <div class="collection__data">
                             <span>New Colors Introduced</span>
                             <h1>SMARTPHONE</h1>
-                            <a href="/myspring/product?type=phone">SHOP NOW</a>
+                            <a href="/home/products?type=phone">SHOP NOW</a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +126,7 @@
                         <div class="collection__data">
                             <span>Phone Device Presets</span>
                             <h1>TABLET</h1>
-                            <a href="/myspring/product?type=tablet">SHOP NOW</a>
+                            <a href="/home/products?type=tablet">SHOP NOW</a>
                         </div>
                     </div>
                 </div>
@@ -139,7 +138,7 @@
                         <div class="collection__data">
                             <span>Phone Device Presets</span>
                             <h1>LAPTOP</h1>
-                            <a href="/myspring/product?type=laptop">SHOP NOW</a>
+                            <a href="/home/products?type=laptop">SHOP NOW</a>
                         </div>
                     </div>
                 </div>
@@ -151,7 +150,7 @@
                         <div class="collection__data">
                             <span>Phone Device Presets</span>
                             <h1>HEADPHONES</h1>
-                            <a href="/myspring">SHOP NOW</a>
+                            <a href="/home">SHOP NOW</a>
                         </div>
                     </div>
                 </div>
