--- a/src/main/resources/static/views/list-product.html
+++ b/src/main/resources/static/views/list-product.html
@@ -60,9 +60,7 @@
             <div class = "products" id = "list-product">
 
             </div>
-            <c:if test = "${!loadmore }">
-                <button class = "" onclick="loadMore()" id = "load-more">Load more</button>
-            </c:if>
+            <button th:if = "${!loadmore }" class = "" onclick="loadMore()" id = "load-more">Load more</button>
         </div>
     </div>
 </div>
@@ -74,7 +72,7 @@
     });
 
     let type = params.type;
-
+    console.log(type);
 </script>
 <script src="../resources/js/products.js"></script>
 </body>
