--- a/src/main/resources/static/views/error.html
+++ b/src/main/resources/static/views/error.html
@@ -10,6 +10,6 @@
 <body>
     <p style="font-size: 200px">404</p>
 
-    <a href="/home" style="font-size: 100px">Back to home</a>
+    <a href="/login?status=401" style="font-size: 100px">Back to home</a>
 </body>
 </html>
