--- a/src/main/resources/static/resources/css/checkout/style.css
+++ b/src/main/resources/static/resources/css/checkout/style.css
@@ -1,16 +1,16 @@
 @font-face {
 	font-family: "Lato-Regular";
-	src: url("/myspring/resources/fonts/lato/Lato-Regular.ttf");
+	src: url("http://localhost:8080/resources/fonts/lato/Lato-Regular.ttf");
 }
 
 @font-face {
 	font-family: "Lato-Black";
-	src: url("/myspring/resources/fonts/lato/Lato-Black.ttf");
+	src: url("http://localhost:8080/resources/fonts/lato/Lato-Black.ttf");
 }
 
 @font-face {
 	font-family: "Lato-Bold";
-	src: url("/myspring/resources/fonts/lato/Lato-Bold.ttf");
+	src: url("http://localhost:8080/resources/fonts/lato/Lato-Bold.ttf");
 }
 
 * {
@@ -24,7 +24,7 @@ body {
 	font-size: 14px;
 	margin: 0;
 	color: #999;
-	background: url("/myspring/resources/images/form-wizard-bg.jpg")
+	background: url("http://localhost:8080/resources/images/form-wizard-bg.jpg")
 		no-repeat center center;
 	height: 100vh;
 	background-size: cover;
