--- a/src/main/resources/static/views/registor.html
+++ b/src/main/resources/static/views/registor.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="signup-image">
-                    <figure><img src="https://colorlib.com/etc/regform/colorlib-regform-7/images/signup-image.jpg" alt="sing up image"></figure>
+                    <figure onclick="returnLogin()" style="cursor: pointer"><img src="https://colorlib.com/etc/regform/colorlib-regform-7/images/signup-image.jpg" alt="sing up image"></figure>
                     <a href="#" class="signup-image-link">I am already member</a>
                 </div>
             </div>
@@ -206,6 +206,9 @@
         });
     }
 
+    function returnLogin() {
+        window.location.replace("/login");
+    }
 </script>
 </body>
 </html>
