--- a/src/main/resources/static/views/list-product.html
+++ b/src/main/resources/static/views/list-product.html
@@ -28,7 +28,7 @@
             <h2>Price</h2>
             <hr>
             <span class = "menu-input">
-                    <p class = "menu-input-max">The highest price is $9,500.00</p>
+<!--                    <p class = "menu-input-max">The highest price is $9,500.00</p>-->
                     <p>From $</p>
                     <input type="number" name="" id="price-bot">
                     <p>To $</p>
