--- a/src/main/resources/static/views/manage.html
+++ b/src/main/resources/static/views/manage.html
@@ -211,7 +211,7 @@
                                     <div class="row d-flex justify-content-center">
                                         <div class="col">
                                             <p class="text-dark mb-0 fw-semibold">Price</p>
-                                            <h3 class="m-0" th:text="${totalPrice }"></h3>
+                                            <h3 class="m-0" th:text="${totalPrice } + '$'"></h3>
                                             <p class="mb-0 text-truncate text-muted"><span class="text-danger"><i class="mdi mdi-trending-down"></i>35%</span> Total Price Today</p>
                                         </div>
                                         <div class="col-auto align-self-center">
@@ -229,8 +229,8 @@
                                     <div class="row d-flex justify-content-center">
                                         <div class="col">
                                             <p class="text-dark mb-0 fw-semibold">Customer</p>
-                                            <h3 class="m-0">5</h3>
-                                            <p class="mb-0 text-truncate text-muted"><span class="text-success"><i class="mdi mdi-trending-up"></i>10.5%</span> Completions Weekly</p>
+                                            <h3 class="m-0" th:text="${count}"></h3>
+                                            <p class="mb-0 text-truncate text-muted"><span class="text-success"><i class="mdi mdi-trending-up"></i>10.5%</span> Total Customers Today</p>
                                         </div>
                                         <div class="col-auto align-self-center">
                                             <div class="report-main-icon bg-light-alt">
@@ -295,7 +295,6 @@
                                 <canvas id="myChart2"></canvas>
                                 <h6 class="bg-light-alt py-3 px-2 mb-0">
                                     <i data-feather="calendar" class="align-self-center icon-xs me-1"></i>
-                                    01 January 2020 to 31 December 2020
                                 </h6>
                             </div>
                             <div class="table-responsive mt-2">
@@ -325,7 +324,7 @@
                         <div class="card-header">
                             <div class="row align-items-center">
                                 <div class="col">
-                                    <h4 class="card-title">Top customers</h4>
+                                    <h4 class="card-title">Top Order</h4>
                                 </div><!--end col-->
                             </div>  <!--end row-->
                         </div><!--end card-header-->
